--- a/testing/test.html
+++ b/testing/test.html
@@ -40,8 +40,8 @@
     <button id="removeSessionStorage" type="submit">Remove</button><br/>
 
     <script src="/dist/iron-db.js"></script>
-    <script src="idb-keyval-iife.js"></script>
-    <script src="js-cookie.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/idb-keyval@3.0.5/dist/idb-keyval-iife.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.0/js.cookie.js"></script>
     <script src="test.js"></script>
   </body>
 </html>
