Rename IronDB to ImmortalDB (https://github.com/gruns/ImmortalDB) to obviate any confusion with https://www.irondb.io/.

--- a/testing/safari-cross-origin-iframe/iframe.html
+++ b/testing/safari-cross-origin-iframe/iframe.html
@@ -2,7 +2,7 @@
   <body>
     iframe
 
-    <script src="/dist/iron-db.js"></script>
+    <script src="/dist/immortal-db.js"></script>
     <script src="iframe.js"></script>
   </body>
 </html>
