--- a/testing/umd.html
+++ b/testing/umd.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <script src="/dist/iron-db.min.js"></script>
+    <script src="/dist/immortal-db.min.js"></script>
     <script>
       (async () => {
-          const db = IronDB.IronDB;
+          const db = ImmortalDB.ImmortalDB;
           await db.set('hi', 'lolsup');
       })();
     </script>
