--- a/testing/test.html
+++ b/testing/test.html
@@ -39,7 +39,7 @@
     <span>SessionStorage</span> <input id="sessionStorage" type="text" disabled>
     <button id="removeSessionStorage" type="submit">Remove</button><br/>
 
-    <script src="/dist/iron-db.js"></script>
+    <script src="/dist/immortal-db.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/idb-keyval@3.0.5/dist/idb-keyval-iife.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.0/js.cookie.js"></script>
     <script src="test.js"></script>
