--- a/testing/test.html
+++ b/testing/test.html
@@ -16,6 +16,9 @@
         display: inline-block;
       }
     </style>
+
+    <script src="https://cdn.jsdelivr.net/npm/idb-keyval@3.0.5/dist/idb-keyval-iife.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.0/js.cookie.js"></script>
   </head>
   <body>
     <br/>
@@ -39,9 +42,6 @@
     <span>SessionStorage</span> <input id="sessionStorage" type="text" disabled>
     <button id="removeSessionStorage" type="submit">Remove</button><br/>
 
-    <script src="/dist/immortal-db.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/idb-keyval@3.0.5/dist/idb-keyval-iife.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.0/js.cookie.js"></script>
-    <script src="test.js"></script>
+    <script src="/testing/test.js"></script>
   </body>
 </html>
