--- a/testing/test.html
+++ b/testing/test.html
@@ -19,6 +19,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/idb-keyval@3.0.5/dist/idb-keyval-iife.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.0/js.cookie.js"></script>
+    <!-- immortal-db.js is injected by webpack-dev-server here. -->
   </head>
   <body>
     <br/>
