Switch to HTML5-preferred <br> over <br/> and <hr> over <hr/>.

--- a/testing/test.html
+++ b/testing/test.html
@@ -22,26 +22,26 @@
     <!-- immortal-db.js is injected by webpack-dev-server here. -->
   </head>
   <body>
-    <br/>
-    <span>Key</span><input id="key" type="text" value="keysup"><br/>
-    <hr/>
+    <br>
+    <span>Key</span><input id="key" type="text" value="keysup"><br>
+    <hr>
     <span>Value</span> <input id="value" type="text">
     <button id="set" type="submit">Set</button>
     <button id="get" type="submit">Get</button>
     <button id="remove" type="submit">Remove</button>
-    <hr/>
+    <hr>
 
     <span>Cookies</span> <input id="cookies" type="text" disabled>
-    <button id="removeCookie" type="submit">Remove</button><br/>
+    <button id="removeCookie" type="submit">Remove</button><br>
 
     <span>IndexedDB</span> <input id="indexedDB" type="text" disabled>
-    <button id="removeIndexedDB" type="submit">Remove</button><br/>
+    <button id="removeIndexedDB" type="submit">Remove</button><br>
 
     <span>LocalStorage</span> <input id="localStorage" type="text" disabled>
-    <button id="removeLocalStorage" type="submit">Remove</button><br/>
+    <button id="removeLocalStorage" type="submit">Remove</button><br>
 
     <span>SessionStorage</span> <input id="sessionStorage" type="text" disabled>
-    <button id="removeSessionStorage" type="submit">Remove</button><br/>
+    <button id="removeSessionStorage" type="submit">Remove</button><br>
 
     <script src="/testing/test.js"></script>
   </body>
