--- a/testing/cross-origin-iframe/same-origin.html
+++ b/testing/cross-origin-iframe/same-origin.html
@@ -13,6 +13,6 @@
     parent
     <br>
     <br>
-    <iframe src="http://localhost:9091/testing/cross-origin-iframe/iframe.html"></iframe>
+    <iframe src="/testing/cross-origin-iframe/iframe.html"></iframe>
   </body>
 </html>
