Update testing URLs.

--- a/testing/iframes/same-origin.html
+++ b/testing/iframes/same-origin.html
@@ -10,9 +10,9 @@
     </style>
   </head>
   <body>
-    parent
+    Same Origin Iframe
     <br>
     <br>
-    <iframe src="/testing/cross-origin-iframe/iframe.html"></iframe>
+    <iframe src="/testing/iframes/iframe.html"></iframe>
   </body>
 </html>
