--- a/testing/iframes/cross-origin.html
+++ b/testing/iframes/cross-origin.html
@@ -10,9 +10,9 @@
     </style>
   </head>
   <body>
-    parent
+    Cross Origin Iframe
     <br>
     <br>
-    <iframe src="//localhost:9091/testing/cross-origin-iframe/iframe.html"></iframe>
+    <iframe src="//localhost:9091/testing/iframes/iframe.html"></iframe>
   </body>
 </html>
