Added expires options

--- a/testing/test.html
+++ b/testing/test.html
@@ -38,7 +38,10 @@
 
     <span>Key</span><input id="key" type="text" value="keysup"><br>
     <br>
-    <span>Value</span> <input id="value" type="text">
+    <span>Value</span> <input id="value" type="text"><br>
+    <br>
+    <span>Expires</span> <input id="expires" type="text" value="0"><br>
+    <br>
     <button id="set" type="submit">Set</button>
     <button id="get" type="submit">Get</button>
     <button id="remove" type="submit">Remove</button>
