chore: rename testing directory to playground

--- a/playground/iframes/cross-origin.html
+++ b/playground/iframes/cross-origin.html
@@ -10,9 +10,9 @@
     </style>
   </head>
   <body>
-    Same Origin Iframe
+    Cross Origin Iframe
     <br>
     <br>
-    <iframe src="/testing/iframes/iframe.html"></iframe>
+    <iframe src="//localhost:9091/playground/iframes/iframe.html"></iframe>
   </body>
 </html>
