--- a/playground/test.html
+++ b/playground/test.html
@@ -58,6 +58,6 @@
     <span>SessionStorage</span> <input id="sessionStorage" type="text" disabled>
     <button id="removeSessionStorage" type="submit">Remove</button><br>
 
-    <script src="/testing/test.js"></script>
+    <script src="/playground/test.js"></script>
   </body>
 </html>
