--- a/playground/iframes/same-origin.html
+++ b/playground/iframes/same-origin.html
@@ -10,9 +10,9 @@
     </style>
   </head>
   <body>
-    Cross Origin Iframe
+    Same Origin Iframe
     <br>
     <br>
-    <iframe src="//localhost:9091/testing/iframes/iframe.html"></iframe>
+    <iframe src="/playground/iframes/iframe.html"></iframe>
   </body>
 </html>
